[gd_scene load_steps=10 format=3 uid="uid://ckfsbhonrewrr"]

[ext_resource type="Script" uid="uid://e3805yug4qro" path="res://Scenes/Stealth/smoke_cloud.gd" id="1_hp6ss"]
[ext_resource type="Texture2D" uid="uid://cxgtmyymrfvrb" path="res://Ninja Adventure - Asset Pack/FX/Smoke/Smoke/SpriteSheet.png" id="2_o3jvm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tp1lp"]
atlas = ExtResource("2_o3jvm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oykix"]
atlas = ExtResource("2_o3jvm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v372"]
atlas = ExtResource("2_o3jvm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6b7v"]
atlas = ExtResource("2_o3jvm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykg6t"]
atlas = ExtResource("2_o3jvm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxnxl"]
atlas = ExtResource("2_o3jvm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_snp40"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp1lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oykix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6b7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykg6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxnxl")
}],
"loop": false,
"name": &"poof",
"speed": 5.0
}]

[node name="SmokeCloud" type="Area2D"]
z_index = 100
script = ExtResource("1_hp6ss")

[node name="SmokePoof" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_snp40")
animation = &"poof"
autoplay = "poof"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StealthTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="StealthTimer" to="." method="_on_stealth_timer_timeout"]
